tests/swoole_redis/connect_timeout.php
<?php
require_once __DIR__ . "/../include/swoole.inc";
require_once __DIR__ . "/../include/api/swoole_redis/connect_timeout.php";

?>

